Fixing font size on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -102,6 +102,15 @@ div#main_content_wrap {
     position: inherit !important;
     margin: auto;
   }
+  h1{
+    font-size: xx-large!important;
+  }
+  h2{
+    font-size: x-large!important;
+  }
+  h3{
+    font-size: large!important;
+  }
 }
 
 .highlight,
